sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: not found: value i
        for (i<-0 to i + ecart)
                     ^